--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -97,9 +97,7 @@
     "acceptButton": "สมัครสมาชิก",
    
     "checkboxes": {
-      "terms": "ฉันได้อ่านและยอมรับ นโยบายการคุ้มครองข้อมูลส่วนบุคคุล",
-      "privacy": "ฉันได้อ่านและยอมรับ นโยบายและเงื่อนไขการให้บริการศูนย์รับฝากจุลินทรีย์",
-      "cookies": "ฉันได้อ่านและยอมรับ ข้อตกลงการให้บริการฝากเก็บสายพันธุ์จุลินทรีย์ และ/หรือชีววัตถุ"
+      "allPolicies": "ฉันได้อ่านและยอมรับนโยบายการคุ้มครองข้อมูลส่วนบุคคล, นโยบายและเงื่อนไขการให้บริการ และข้อตกลงการให้บริการทั้งหมด"
     }
   },
   "dashboard": {
