feat: Add contact information section and enhance service selection in OrganizationInformation form

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -140,15 +140,16 @@
     "type": {
       "title": "Organization Type",
       "required": "Please select organization type",
-      "international": "International",
-      "domesticPublic": "Domestic Public",
-      "domesticPrivate": "Domestic Private",
-      "internal": "Internal"
+      "international": "International ",
+      "domesticPublic": "Domestic Public ",
+      "domesticPrivate": "Domestic Private ", 
+      "internal": "Internal "
     },
     "services": {
       "title": "Services",
       "subtitle": "Services you are interested in (Select 1 option)",
       "required": "Please select a service",
+      "interestedAll": "Interested in all services",
       "qualityTesting": "Quality Testing",
       "cultureSupply": "Culture Supply Services",
       "publicDeposit": "Public Deposit",
@@ -232,20 +233,40 @@
     "typeRequired": "Please select user type",
     "individual": "Individual",
     "corporate": "Corporate",
-    "citizenId": "ID Card/Passport",
-    "citizenIdRequired": "Please enter ID Card/Passport",
-    "fullName": "Full Name *",
+    "citizenId": "Tax ID Number",
+    "citizenIdRequired": "Please enter tax ID number",
+    "fullName": "Full Name",
     "fullNameRequired": "Please enter full name",
     "fullNameEng": "Full Name (English)",
     "fullNameEngRequired": "Please enter full name in English",
-    "gender": "Gender *",
+    "gender": "Gender",
     "genderRequired": "Please select gender",
     "genderPlaceholder": "Select gender",
     "male": "Male",
     "female": "Female",
     "other": "Other",
-    "customerCode": "Customer Code",
-    "customerCodeRequired": "Please enter customer code",
+    "receiptName": "Receipt Name (if any)",
+    "note": "Note (optional)",
+    "notePlaceholder": "Enter note",
+    "placeholder": "Enter data"
+  },
+  "contactInfo": {
+    "title": "Contact Information",
+    "phone": "Phone Number",
+    "phoneRequired": "Please enter phone number",
+    "phoneBackup": "Backup Phone",
+    "fax": "Fax Number",
+    "address": "Address (Home/Office)",
+    "addressRequired": "Please enter address",
+    "addressPlaceholder": "Enter home/office address",
+    "subdistrict": "Subdistrict",
+    "district": "District",
+    "province": "Province",
+    "provinceRequired": "Please enter province",
+    "country": "Country",
+    "countryRequired": "Please enter country",
+    "postalCode": "Postal Code",
+    "postalCodePlaceholder": "Postal Code",
     "placeholder": "Enter data"
   },
   "preview": {
