--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -140,15 +140,16 @@
     "type": {
       "title": "รูปแบบขององค์กร",
       "required": "กรุณาเลือกรูปแบบองค์กร",
-      "international": "International",
-      "domesticPublic": "Domestic Public",
-      "domesticPrivate": "Domestic Private",
-      "internal": "Internal"
+      "international": "International ",
+      "domesticPublic": "Domestic Public ",
+      "domesticPrivate": "Domestic Private ", 
+      "internal": "Internal "
     },
     "services": {
       "title": "รูปแบบบริการ",
-      "subtitle": "ความต้องการใช้บริการ (เลือก 1 รายการ)",
+      "subtitle": "สามารถเลือกได้มากกว่า 1 รายการ",
       "required": "กรุณาเลือกบริการ",
+      "interestedAll": "สนใจทุกงานบริการ",
       "qualityTesting": "คุณภาพองค์กร",
       "cultureSupply": "งานบริการจัดจำหน่าย (Culture Supply Services)",
       "publicDeposit": "งานฝากเพื่อสาธารณะ (Public Deposit)",
@@ -232,20 +233,40 @@
     "typeRequired": "กรุณาเลือกประเภทผู้ใช้งาน",
     "individual": "บุคคลธรรมดา",
     "corporate": "นิติบุคคล",
-    "citizenId": "เลขบัตรประชาชน/หนังสือเดินทาง",
-    "citizenIdRequired": "กรุณากรอกเลขบัตรประชาชน",
-    "fullName": "ชื่อ-นามสกุล *",
+    "citizenId": "เลขประจำตัวผู้เสียภาษี",
+    "citizenIdRequired": "กรุณากรอกเลขประจำตัวผู้เสียภาษี",
+    "fullName": "ชื่อ-นามสกุล",
     "fullNameRequired": "กรุณากรอกชื่อ-นามสกุล",
     "fullNameEng": "ชื่อ-นามสกุล (ภาษาอังกฤษ)",
-    "fullNameEngRequired": "กรุณากรอกชื่อ-นามสกุลภาษาอังกฤษ",
-    "gender": "เพศ *",
+    "fullNameEngRequired": "กรุณากรอกชื่อ-นามสกุล ภาษาอังกฤษ",
+    "gender": "เพศ",
     "genderRequired": "กรุณาเลือกเพศ",
     "genderPlaceholder": "เลือกเพศ",
     "male": "ชาย",
     "female": "หญิง",
     "other": "อื่นๆ",
-    "customerCode": "รหัสลูกค้า",
-    "customerCodeRequired": "กรุณากรอกรหัสลูกค้า",
+    "receiptName": "ออกใบเสร็จในนาม(ถ้ามี)",
+    "note": "หมายเหตุ (optional)",
+    "notePlaceholder": "ระบุหมายเหตุ",
+    "placeholder": "ระบุข้อมูล"
+  },
+  "contactInfo": {
+    "title": "ข้อมูลติดต่อ",
+    "phone": "เบอร์โทรศัพท์",
+    "phoneRequired": "กรุณากรอกเบอร์โทรศัพท์",
+    "phoneBackup": "เบอร์โทรสำรอง",
+    "fax": "เบอร์แฟกซ์",
+    "address": "ที่อยู่ (บ้าน/สำนักงาน)",
+    "addressRequired": "กรุณากรอกที่อยู่",
+    "addressPlaceholder": "ระบุที่อยู่บ้าน/สำนักงาน",
+    "subdistrict": "แขวง/ตำบล",
+    "district": "เขต/อำเภอ",
+    "province": "จังหวัด",
+    "provinceRequired": "กรุณากรอกจังหวัด",
+    "country": "ประเทศ",
+    "countryRequired": "กรุณาระบุประเทศ",
+    "postalCode": "รหัสไปรษณีย์",
+    "postalCodePlaceholder": "รหัสไปรษณีย์",
     "placeholder": "ระบุข้อมูล"
   },
   "preview": {
