feat: Update contact information labels and enhance text styling in OrganizationInformation form

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -254,7 +254,7 @@
     "title": "Contact Information",
     "phone": "Phone Number",
     "phoneRequired": "Please enter phone number",
-    "phoneBackup": "Backup Phone",
+    "phoneBackup": "Phone",
     "fax": "Fax Number",
     "address": "Address (Home/Office)",
     "addressRequired": "Please enter address",
