--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -254,7 +254,7 @@
     "title": "ข้อมูลติดต่อ",
     "phone": "เบอร์โทรศัพท์",
     "phoneRequired": "กรุณากรอกเบอร์โทรศัพท์",
-    "phoneBackup": "เบอร์โทรสำรอง",
+    "phoneBackup": "เบอร์มือถือ",
     "fax": "เบอร์แฟกซ์",
     "address": "ที่อยู่ (บ้าน/สำนักงาน)",
     "addressRequired": "กรุณากรอกที่อยู่",
