--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -260,12 +260,15 @@
     "addressRequired": "กรุณากรอกที่อยู่",
     "addressPlaceholder": "ระบุที่อยู่บ้าน/สำนักงาน",
     "subdistrict": "แขวง/ตำบล",
+    "subdistrictRequired": "กรุณากรอกแขวง/ตำบล",
     "district": "เขต/อำเภอ",
+    "districtRequired": "กรุณากรอกเขต/อำเภอ",
     "province": "จังหวัด",
     "provinceRequired": "กรุณากรอกจังหวัด",
     "country": "ประเทศ",
     "countryRequired": "กรุณาระบุประเทศ",
     "postalCode": "รหัสไปรษณีย์",
+    "postalCodeRequired": "กรุณากรอกรหัสไปรษณีย์",
     "postalCodePlaceholder": "รหัสไปรษณีย์",
     "placeholder": "ระบุข้อมูล"
   },
