fix: Update confirmation message and enhance text styling in Organizationpreview component

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,7 +17,7 @@
     "logout": "Logout",
     "back": "Back",
     "next": "Next",
-    "confirmVerification": "Confirm Verification"
+    "confirmVerification": "Create Account"
   },
   "documents": {
     "title": "Documents",
