--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -15,8 +15,9 @@
     "loading": "กำลังโหลด...",
     "search": "ค้นหา...",
     "logout": "ออกจากระบบ",
-    "back": "ย้อนกลับ",
+    "back": "กลับ",
     "next": "ถัดไป",
+    "backToLogin": "กลับไปหน้าเข้าสู่ระบบ",
     "confirmVerification": "สร้างบัญชี"
   },
   "documents": {
@@ -320,6 +321,35 @@
       "fileName": "ไฟล์ที่แนบ",
       "description": "คำอธิบาย",
       "type": "เอกสารรับรองตัวตน"
+    }
+  },
+  "forgotPassword": {
+    "title": "ลืมรหัสผ่าน",
+    "description": "กรุณากรอกที่อยู่อีเมลของคุณ เราจะส่งคำแนะนำในการรีเซ็ตรหัสผ่านให้คุณ",
+    "emailPlaceholder": "กรอกที่อยู่อีเมล",
+    "sendButton": "ยืนยัน",
+    "submitButton": "ส่งคำแนะนำการรีเซ็ต",
+    "success": {
+      "title": "ตรวจสอบอีเมลของคุณ",
+      "description": "เราได้ส่งคำแนะนำการรีเซ็ตรหัสผ่านไปยังที่อยู่อีเมลของคุณแล้ว"
+    },
+    "reset": {
+      "title": "รีเซ็ตรหัสผ่าน",
+      "description": "กรุณากรอกรหัสผ่านใหม่ของคุณด้านล่าง",
+      "newPassword": "รหัสผ่านใหม่",
+      "newPasswordPlaceholder": "กรอกรหัสผ่านใหม่",
+      "confirmPassword": "ยืนยันรหัสผ่านใหม่",
+      "confirmPasswordPlaceholder": "ยืนยันรหัสผ่านใหม่ของคุณ",
+      "passwordRequired": "กรุณากรอกรหัสผ่าน",
+      "confirmPasswordRequired": "กรุณายืนยันรหัสผ่านของคุณ",
+      "passwordMinLength": "รหัสผ่านต้องมีอย่างน้อย 8 ตัวอักษร",
+      "passwordPattern": "รหัสผ่านต้องประกอบด้วยตัวพิมพ์ใหญ่ ตัวพิมพ์เล็ก และตัวเลข",
+      "passwordMismatch": "รหัสผ่านไม่ตรงกัน",
+      "submitButton": "รีเซ็ตรหัสผ่าน"
+    },
+    "complete": {
+      "title": "รีเซ็ตรหัสผ่านเสร็จสิ้น",
+      "description": "รหัสผ่านของคุณได้รับการรีเซ็ตเรียบร้อยแล้ว ตอนนี้คุณสามารถเข้าสู่ระบบด้วยรหัสผ่านใหม่ได้"
     }
   }
 }
