--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -15,7 +15,7 @@
     "loading": "กำลังโหลด...",
     "search": "ค้นหา...",
     "logout": "ออกจากระบบ",
-    "back": "กลับ",
+    "back": "ย้อนกลับ",
     "next": "ถัดไป",
     "backToLogin": "กลับไปหน้าเข้าสู่ระบบ",
     "confirmVerification": "สร้างบัญชี"
@@ -331,7 +331,7 @@
     "submitButton": "ส่งคำแนะนำการรีเซ็ต",
     "success": {
       "title": "ตรวจสอบอีเมลของคุณ",
-      "description": "เราได้ส่งคำแนะนำการรีเซ็ตรหัสผ่านไปยังที่อยู่อีเมลของคุณแล้ว"
+      "description": "ตรวจเช็คข้อความในอีเมลของคุณ เพื่อตั้งรหัสผ่านใหม่"
     },
     "reset": {
       "title": "รีเซ็ตรหัสผ่าน",
