feat: Add localization for item name and update Shopping page to use translated labels for product details

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -400,6 +400,7 @@
     "orderSummary": "Order Summary",
     "total": "Total",
     "addToCart": "Add to Cart",
+    "itemName": "Item",
     "quantity": "Quantity",
     "unitPrice": "Unit Price",
     "totalPrice": "Total Price"
