--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -400,6 +400,7 @@
     "orderSummary": "สรุปรายการ",
     "total": "ยอดรวม",
     "addToCart": "เพิ่มลงรถเข็น",
+    "itemName": "รายการ",
     "quantity": "จำนวน",
     "unitPrice": "ราคาต่อหน่วย",
     "totalPrice": "ราคารวม"
