feat: Add CartModal component and localization for cart success messages in Shopping page

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -404,5 +404,12 @@
     "quantity": "Quantity",
     "unitPrice": "Unit Price",
     "totalPrice": "Total Price"
+  },
+  "cartModal": {
+    "title": "Added Successfully",
+    "message1": "We have added your products",
+    "message2": "to your cart successfully",
+    "backToHome": "Back to Home",
+    "goToCart": "Go to Cart"
   }
 }
