--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -404,5 +404,12 @@
     "quantity": "จำนวน",
     "unitPrice": "ราคาต่อหน่วย",
     "totalPrice": "ราคารวม"
+  },
+  "cartModal": {
+    "title": "เพิ่มสินค้าสำเร็จ",
+    "message1": "เราได้เพิ่มสินค้าของท่าน",
+    "message2": "เข้าไปยังรถเข็นเรียบร้อย",
+    "backToHome": "กลับไปหน้าแรก",
+    "goToCart": "ไปหน้ารถเข็น"
   }
 }
