feat: Add pincode verification step to RegisterPage and update form validation logic

--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -1,7 +1,7 @@
 {
   "common": {
     "email": "อีเมล",
-    "password": "หัสผ่าน",
+    "password": "รหัสผ่าน",
     "confirmPassword": "ยืนยันรหัสผ่าน",
     "login": "เข้าสู่ระบบ",
     "signIn": "เข้าสู่ระบบ",
