feat: Update PurchaseOrder component with new file upload functionality and modify localization for titles

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -429,7 +429,7 @@
     "lecithinDescription": "Lecithin, Tween®, ICR plus with lockable lid, plate diam. 55 mm, sterile, γ-irradiated, pkg of 10 plates Triple packed; suitable for air monitoring"
   },
   "purchaseOrder": {
-    "title": "Purchase Order",
+    "title": "list Products",
     "back": "Back",
     "productCode": "Product Code",
     "tistrNumber": "TISTR Number",
