--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -429,7 +429,7 @@
     "lecithinDescription": "Lecithin, Tween®, ICR plus with lockable lid, plate diam. 55 mm, sterile, γ-irradiated, pkg of 10 plates Triple packed; suitable for air monitoring"
   },
   "purchaseOrder": {
-    "title": "ใบคำสั่งซื้อ",
+    "title": "รายการสินค้า",
     "back": "ย้อนกลับ",
     "productCode": "รหัสสินค้า",
     "tistrNumber": "TISTR Number",
